[package]
name = "openbmclapi_rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["local_test"]
local_test = []

[dependencies]

reqwest = { version = "0.11.23", features = ["json"] }
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.112"
toml = "0.8.8"
apache-avro = "0.16.0"

md-5 = "0.10.6"
sha1 = "0.10.6"

zstd = "0.13.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
