[package]
name = "socket-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rust_socketio = { path = "D:/githubs/rust-socketio/socketio", features = ["async"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.112"
toml = "0.8.8"
