[package]
name = "socket-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rust_socketio = { version = "0.4.4", features = ["async"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.112"
toml = "0.8.8"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }
